# fastAPI-CRUD-docker

./: Dockerfile  README.md  create_tables.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
app/: crud.py  database.py  db_models.py  main.py
app/routers/: tasks.py
tests/: test_crud.py
